--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -14,16 +14,20 @@
 			<artifactId>net.lr.ds.hello</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!-- Basic Felix bundles -->
+		
+		<!-- 
+			Basic Felix bundles. This is more than we strictly need but the resolver works with the 
+			runrequires in the bndrun file to make sure we only select the ones we actually need.
+		 -->
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.framework</artifactId>
-			<version>5.4.0</version>
+			<version>5.6.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.eventadmin</artifactId>
-			<version>1.4.6</version>
+			<version>1.4.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -33,7 +37,7 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.metatype</artifactId>
-			<version>1.1.2</version>
+			<version>1.1.6</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>kxml2</artifactId>
@@ -44,7 +48,7 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.fileinstall</artifactId>
-			<version>3.5.2</version>
+			<version>3.6.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -66,6 +70,11 @@
 					<groupId>org.apache.felix</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.gogo.runtime</artifactId>
+			<version>0.16.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
