--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,13 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+    <properties>
+    	<bnd.version>4.0.0</bnd.version>
+    </properties>
+
 	<modules>
-	<module>net.lr.ds.hello</module>
-	<module>starter</module>
+        <module>net.lr.ds.hello</module>
+	    <module>starter</module>
 	</modules>
 
 	<dependencies>
@@ -20,15 +24,20 @@
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>osgi.core</artifactId>
-			<version>6.0.0</version>
+			<version>7.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>osgi.cmpn</artifactId>
-			<version>6.0.0</version>
+			<version>7.0.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+	        <groupId>org.apache.felix</groupId>
+	        <artifactId>org.apache.felix.http.servlet-api</artifactId>
+	        <version>1.1.2</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -49,7 +58,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -58,7 +67,7 @@
 			<plugin>
 				<groupId>biz.aQute.bnd</groupId>
 				<artifactId>bnd-maven-plugin</artifactId>
-				<version>3.5.0</version>
+				<version>${bnd.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -70,7 +79,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.1.0</version>
 				<configuration>
 					<archive>
 						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
