--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>starter</artifactId>
-
+    
     <dependencies>
         <dependency>
             <groupId>net.lr.demo</groupId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.framework</artifactId>
-            <version>5.6.8</version>
+            <version>6.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.configadmin</artifactId>
-            <version>1.8.8</version>
+            <version>1.9.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
@@ -73,12 +73,12 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.gogo.runtime</artifactId>
-            <version>1.0.2</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.gogo.shell</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0</version>
         </dependency>
 
 <!-- 
@@ -91,13 +91,18 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr</artifactId>
-            <version>2.0.14</version>
+            <version>2.1.0</version>
             <exclusions>
                 <exclusion>
                     <artifactId>animal-sniffer-annotations</artifactId>
                     <groupId>org.codehaus.mojo</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+	        <groupId>org.apache.felix</groupId>
+	        <artifactId>org.apache.felix.http.jetty</artifactId>
+	        <version>4.0.2</version>
         </dependency>
     </dependencies>
 
@@ -106,7 +111,7 @@
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-indexer-maven-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>${bnd.version}</version>
                 <configuration>
                     <localURLs>REQUIRED</localURLs>
                 </configuration>
@@ -122,7 +127,7 @@
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-resolver-maven-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>${bnd.version}</version>
                 <configuration>
                     <failOnChanges>false</failOnChanges>
                     <useMavenDependencies>true</useMavenDependencies>
@@ -141,7 +146,7 @@
             <plugin>
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-export-maven-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>${bnd.version}</version>
                 <configuration>
                     <bndruns>
                         <bndrun>hello.bndrun</bndrun>
